--- a/main/templates/main/header.html
+++ b/main/templates/main/header.html
@@ -13,8 +13,9 @@
 	<nav class='nav-wrapper'>
 		<a href="/" class='brand-logo'>Tutorials</a>
 		<ul id='nav-mobile' class='right hide-on-med-and-down'>
-			<li >hello</li>
-			<li>hiii</li>
+			<li><a href="/">Home</a></li>
+			<li><a href="#">Community</a></li>
+			<li><a href="/register">Register</a></li>
 
 		</ul>
 
@@ -27,3 +28,4 @@
 	</div>
 
 </body>
+<script  src="{% static 'tinymce/js/prism.js' %}"></script>
